# nextup

./: CHANGELOG.md  README.md  db.csv  nextup.cabal
src/: CLI.hs  Commands.hs  Database.hs  Main.hs
