cabal-version:       >=1.10
name:                nextup
version:             0.1.0.0

license-file:        LICENSE
author:              Cadel Watson
maintainer:          cadel@cadelwatson.com

build-type:          Simple

executable nextup
  main-is:             Main.hs
  other-modules:       CLI, Database, Commands
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       bytestring,
                       vector,
                       cassava,
                       text,
                       optparse-applicative,
                       filepath,
                       directory,
                       ini
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
